Mon Jan  3 11:37:42 2005  Tanaka Akira  <akr@m17n.org>

	* random.c (random_seed): use /dev/urandom if available.
	  [ruby-dev:25392]

Mon Jan  3 11:03:37 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/drb/test_drb.rb: move TestDRbReusePort to new file. 
	  [ruby-dev:25238]

	* test/drb/drbtest.rb: change timeout.

	* test/drb/ignore_test_drb.rb: new file.

Mon Jan  3 07:27:46 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpauth/htpasswd.rb (WEBrick::Htpasswd#reload):
	  raise NotImplementedError if password is encrypted by digest
	  algorithms. This patch is contributed by sheepman. [ruby-list:40467]

	* lib/webrick/httpauth/digestauth.rb
	  (WEBrick::HTTPAuth::DigestAuth#_authenticate): fix digest calculation.
	  This patch is contributed by sheepman. [ruby-list:40482]

	* lib/webrick/{httpauth.rb,httpauth/basicauth.rb,httpproxy.rb}: use
	  pack/unpack-template char "m" instead of lib/base64.rb to do base64
	  encoding/decoding. fixed: [ruby-dev:25336]

	* test/webrick/test_httpauth.rb: new file.

Sun Jan  2 15:42:10 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb: add lazy stop_service.

	* lib/drb/extserv.rb: ditto.

Sun Jan  2 01:17:17 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/drb/drbtest.rb: add method DRbService.ext_service.

	* test/drb/test_drb.rb: ditto.

	* test/drb/test_drbssl.rb: ditto.

Sat Jan  1 20:23:02 2005  Tanaka Akira  <akr@m17n.org>

	* io.c (argf_readpartial): new method ARGF.readpartial.
	  (io_getpartial): extracted from io_readpartial.
	  (io_readpartial): call io_getpartial.

Sat Jan  1 17:44:54 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (each_capitalized): should join header field
	  value.  This patch is contributed sheepman [ruby-list:40478]

	* test/net/http/test_httpheader.rb: test it.

Sat Jan  1 16:21:29 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (copy_stream): use read/write instead of